--- a/akuity-platform/bootstrap-app.yaml
+++ b/akuity-platform/bootstrap-app.yaml
@@ -8,7 +8,7 @@
 #     namespace: argocd
 #   source:
 #     path: apps/
-#     repoURL: 'https://github.com/<repo>'
+#     repoURL: 'https://github.com/kyawzazaw/fintech-devcon'
 #     targetRevision: HEAD
 #     directory: {}
 #   project: default
