--- a/app-of-apps.yaml
+++ b/app-of-apps.yaml
@@ -9,5 +9,5 @@ spec:
   project: default
   source:
     path: apps
-    repoURL: https://github.com/<repo>
+    repoURL: https://github.com/kyawzazaw/fintech-devcon
     targetRevision: HEAD
